[package]
name = "many_op"
version = "0.1.2"
authors = ["Lenny Händler <lenny@lennyhaendler.com>"]
edition = "2018"

description = "do an operation on many variables"
license = "MIT"
repository = "https://github.com/algor1th/many_op"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
